@@ -2,6 +2,10 @@
 
 	* src/mcs51/peeph.def:
 	  Fix bug #2832.
+	* src/z80/gen.c:
+	  Fix some --reserve-regs-iy issues.
+	* src/z80/mappings.i:
+	  Reformat to better match generated code.
 
 2018-10-24 Philipp Klaus Krause <pkk AT spth.de>
 
